--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
+  intl: ^0.18.1
 
   cupertino_icons: ^1.0.2
   http: ^1.1.0
@@ -36,6 +39,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  generate: true
 
   assets:
     - assets/images/generic_image.png
